# loan_approval_prediction_API

./: .gitignore  README.md  build_model.ipynb  loan_model.pkl  pyproject.toml
loan_model_api/: db.sqlite3  manage.py
loan_model_api/api/: forms.py  models.py  serializers.py  urls.py  views.py
loan_model_api/api/migrations/: 0001_initial.py  0002_rename_approvals_approval.py  0003_rename_application_income_approval_applicantincome_and_more.py
loan_model_api/api/templates/: prediction_form.html  prediction_results.html
loan_model_api/loan_model_api/: asgi.py  settings.py  urls.py  wsgi.py
