[tool.poetry]
name = "deploy-ml"
version = "0.1.0"
description = "Deploy a Machine Learning Model"
authors = ["luca spolladore"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = ">=1.26.0,<2.0.0"
scikit-learn = "^1.5.1"
imblearn = "^0.0"
seaborn = "^0.13.2"
keras = "^3.4.1"
tensorflow = "^2.17.0"
ipykernel = "^6.29.5"
jupyter = "^1.0.0"
notebook = "^7.2.1"
django = "^5.0.7"
djangorestframework = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
